Only write back rating if the user selected "write back statistics" in the settings. This seems to be what the user expects. He does obviously not expect something to be written if he just manually and explecitely set the rating.

BUG:274923